--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
     "dependencies": {
         "discord-api-types": "^0.37.101",
         "discord-interactions": "^4.1.0",
-        "@vercel/postgres": "^0.9.0"
+        "@vercel/postgres": "0.9.0"
     }
 }
