--- a/package.json
+++ b/package.json
@@ -9,22 +9,22 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"discord-api-types": "^0.37.101",
+		"@zikeji/hypixel": "^4.1.4",
+		"discord-api-types": "^0.37.110",
 		"discord-interactions": "^4.1.0",
-		"discord-verify": "^1.2.0",
-		"next": "14.2.13",
-		"next-auth": "^4.24.7",
-		"react": "^18",
-		"react-dom": "^18"
+		"next": "15.0.3",
+		"next-auth": "^4.24.10",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1"
 	},
 	"devDependencies": {
-		"typescript": "^5",
-		"@types/node": "^20",
-		"@types/react": "^18",
-		"@types/react-dom": "^18",
-		"postcss": "^8",
-		"tailwindcss": "^3.4.1",
-		"eslint": "^8",
-		"eslint-config-next": "14.2.13"
+		"typescript": "^5.7.2",
+		"@types/node": "^22.10.1",
+		"@types/react": "^18.3.12",
+		"@types/react-dom": "^18.3.1",
+		"postcss": "^8.4.49",
+		"tailwindcss": "^3.4.15",
+		"eslint": "^9.16.0",
+		"eslint-config-next": "15.0.3"
 	}
 }
