--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@clerk/nextjs": "^6.5.2",
 		"@vercel/postgres": "^0.10.0",
 		"@zikeji/hypixel": "^4.1.4",
 		"discord-api-types": "^0.37.110",
 		"discord-interactions": "^4.1.0",
 		"next": "15.0.3",
-		"next-auth": "^4.24.10",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1"
 	},
