--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
 		"typescript-eslint": "^8.17.0"
 	},
 	"devDependencies": {
-		"typescript": "^5.7.2",
+		"@next/eslint-plugin-next": "^15.0.4",
 		"@types/node": "^22.10.1",
 		"@types/react": "^18.3.12",
 		"@types/react-dom": "^18.3.1",
+		"eslint": "^9.16.0",
+		"eslint-config-next": "15.0.3",
 		"postcss": "^8.4.49",
 		"tailwindcss": "^3.4.15",
-		"eslint": "^9.16.0",
-		"eslint-config-next": "15.0.3"
+		"typescript": "^5.7.2"
 	}
 }
