--- a/package.json
+++ b/package.json
@@ -16,16 +16,16 @@
 		"@zikeji/hypixel": "^4.1.4",
 		"discord-api-types": "^0.37.110",
 		"discord-interactions": "^4.1.0",
-		"next": "15.0.3",
-		"react": "^18.3.1",
-		"react-dom": "^18.3.1",
+		"next": "^15.0.4",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
 		"typescript-eslint": "^8.17.0"
 	},
 	"devDependencies": {
 		"@next/eslint-plugin-next": "^15.0.4",
 		"@types/node": "^22.10.1",
-		"@types/react": "^18.3.12",
-		"@types/react-dom": "^18.3.1",
+		"@types/react": "^19.0.0",
+		"@types/react-dom": "^19.0.0",
 		"eslint": "^9.16.0",
 		"eslint-config-next": "15.0.3",
 		"postcss": "^8.4.49",
