--- a/package.json
+++ b/package.json
@@ -1,35 +1,40 @@
 {
-	"name": "isle-of-ducks",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"start": "next start",
-		"lint": "next lint"
-	},
-	"dependencies": {
-		"@clerk/nextjs": "^6.9.0",
-		"@clerk/themes": "^2.2.0",
-		"@eslint/js": "^9.16.0",
-		"@vercel/postgres": "^0.10.0",
-		"@zikeji/hypixel": "^4.1.4",
-		"discord-api-types": "^0.37.111",
-		"discord-interactions": "^4.1.0",
-		"next": "^15.1.0",
-		"react": "^19.0.0",
-		"react-dom": "^19.0.0",
-		"typescript-eslint": "^8.18.0"
-	},
-	"devDependencies": {
-		"@next/eslint-plugin-next": "^15.1.0",
-		"@types/node": "^22.10.2",
-		"@types/react": "^19.0.1",
-		"@types/react-dom": "^19.0.2",
-		"eslint": "^9.16.0",
-		"eslint-config-next": "15.0.3",
-		"postcss": "^8.4.49",
-		"tailwindcss": "^3.4.16",
-		"typescript": "^5.7.2"
-	}
+  "name": "isle-of-ducks",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "@clerk/nextjs": "^6.12.6",
+    "@clerk/themes": "^2.2.22",
+    "@eslint/js": "^9.22.0",
+    "@tailwindcss/postcss": "^4.0.14",
+    "@vercel/postgres": "^0.10.0",
+    "@zikeji/hypixel": "^4.1.4",
+    "discord-api-types": "^0.37.119",
+    "discord-interactions": "^4.1.1",
+    "nanoid": "^5.1.5",
+    "next": "^15.2.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^4.0.14",
+    "typescript-eslint": "^8.27.0"
+  },
+  "devDependencies": {
+    "@next/eslint-plugin-next": "^15.2.3",
+    "@types/node": "^22.13.10",
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.4",
+    "eslint": "^9.22.0",
+    "eslint-config-next": "15.0.3",
+    "postcss": "^8.5.3",
+    "typescript": "^5.8.2"
+  },
+  "trustedDependencies": [
+    "@clerk/shared"
+  ]
 }
