--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@tailwindcss/postcss": "^4.1.6",
     "@vercel/postgres": "^0.10.0",
     "@zikeji/hypixel": "^4.1.5",
+    "canvas": "^3.1.2",
     "discord-api-types": "^0.38.4",
     "discord-interactions": "^4.3.0",
+    "gifwrap": "^0.10.1",
     "nanoid": "^5.1.5",
     "next": "^15.3.2",
     "react": "^19.1.0",
