--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/react-dom": "^19.1.3",
     "eslint": "^9.26.0",
     "eslint-config-next": "15.3.2",
+    "lightningcss": "^1.30.1",
     "postcss": "^8.5.3",
     "typescript": "^5.8.3"
   },
