--- a/package.json
+++ b/package.json
@@ -9,33 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.19.2",
-    "@clerk/themes": "^2.2.43",
+    "@clerk/nextjs": "^6.37.1",
+    "@clerk/themes": "^2.4.51",
     "@eslint/js": "^9.26.0",
-    "@tailwindcss/postcss": "^4.1.6",
+    "@tailwindcss/postcss": "^4.1.18",
     "@vercel/postgres": "^0.10.0",
-    "@zikeji/hypixel": "^4.1.5",
-    "canvas": "^3.1.2",
-    "discord-api-types": "^0.38.4",
-    "discord-interactions": "^4.3.0",
+    "@zikeji/hypixel": "^4.1.7",
+    "canvas": "^3.2.1",
+    "discord-api-types": "^0.38.38",
+    "discord-interactions": "^4.4.0",
     "gifwrap": "^0.10.1",
-    "nanoid": "^5.1.5",
-    "next": "15.3.6",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "nanoid": "^5.1.6",
+    "next": "^16.1.6",
+    "npm": "^11.8.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "tailwindcss": "^4.1.6",
-    "typescript-eslint": "^8.32.0"
+    "typescript-eslint": "^8.54.0"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^15.3.2",
-    "@types/node": "^22.15.17",
-    "@types/react": "^19.1.3",
-    "@types/react-dom": "^19.1.3",
-    "eslint": "^9.26.0",
-    "eslint-config-next": "15.3.2",
-    "lightningcss": "^1.30.1",
-    "postcss": "^8.5.3",
-    "typescript": "^5.8.3"
+    "@next/eslint-plugin-next": "^16.1.6",
+    "@types/node": "^25.1.0",
+    "@types/react": "^19.2.10",
+    "@types/react-dom": "^19.2.3",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.6",
+    "lightningcss": "^1.31.1",
+    "postcss": "^8.5.6",
+    "typescript": "^5.9.3"
   },
   "trustedDependencies": [
     "@clerk/shared"
